# stdfast

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
src/: data.rs  data_py.rs  lib.rs  main.rs  records.rs  test_information.rs  util.rs  write_py.rs
src/records/: record_impl.rs  records.rs
stdfast/: __init__.py  records.py  stdfast.pyi
stdfast/tests/: test_roundtrip.py
tests/: records.rs
