[package]
name = "stdfast"
version = "0.2.1"
edition = "2024"
description = "Parsing of STDF file format to DataFrame with Python bindings"
license = "BSD-2"
repository = "https://github.com/gluek/stdfast"
readme = "README.md"
categories = ["parser-implementations"]
keywords = ["semiconductor", "stdf", "ate"]

[lib]
name = "stdfast"
crate-type = ["lib", "cdylib"]

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
itertools = "0.14.0"
polars = { version = "^0.46.0", features = ["dtype-u8", "dtype-u16", "dtype-i16", "dtype-array", "rows"] }
pyo3-polars = "0.20.0"
pyo3 = { version = "0.23.0", features = ["extension-module", "abi3-py310", "generate-import-lib"]}
serde = "1.0.219"