[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "stdfast"
authors = [
    {name= "Justin Lazear"}
]
maintainers = [
    {name="Gerrit Lükens", email="gerrit.luekens@gmail.com"}
]
dynamic = ["version"]
description="STDF parser and writer"
keywords = ["semiconductor", "stdf", "ate"]
classifier = [
    "Development Status :: 3 - Alpha", 
    "Operating System :: OS Independent", 
    "Programming Language :: Python :: 3", 
    "Programming Language :: Rust", 
    "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = ["polars", "pydantic>=2.12.5"]
license-expression = "BSD-2-Clause"
license-file = "LICENSE"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/gluek/stdfast"
Issues = "https://github.com/gluek/stdfast/issues"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true